Bug 1887783 - ensure we are not retargeting during OnDataAvailable. r=necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D221965